# new_swarm_bridge

new_swarm_bridge/: CMakeLists.txt  package.xml  setup.py
new_swarm_bridge/include/: BridgeClient.h  BridgeClientPythonInterface.h  BridgeServer.h  BridgeServerPythonInterface.h
new_swarm_bridge/scripts/: forward.py  setup.py  test.py  test_client.py  test_pub.py  test_server.py
new_swarm_bridge/src/: BridgeClient.cpp  BridgeClientPythonInterface.cpp  BridgePybind.cpp  BridgeServer.cpp  BridgeServerPythonInterface.cpp  bridge_server_test.cpp  client.cpp  server.cpp
